[project]
name = "tsu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aku>=0.2.6",
    "datasets>=4.1.1",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.140.2",
    "pytest>=8.4.2",
]
